--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pixabay",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://javierdelgado.com.ve/portafolio/pixabay",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
